Move overflow to header to fix extra spacing

--- a/_source/_assets/css/okta/components/_Blog.scss
+++ b/_source/_assets/css/okta/components/_Blog.scss
@@ -81,7 +81,6 @@
 	.Blog {
 		&.is-single {
 			display: block;
-			overflow: hidden;
 
 			.BlogPost {
 				width: 100%;
